fix : css dark mode (freelance, resign, pagination)

--- a/src/app/components/features/freelance-form/freelance-form.scss
+++ b/src/app/components/features/freelance-form/freelance-form.scss
@@ -92,7 +92,7 @@
         margin: 0;
         font-size: 1.5rem;
         font-weight: 500;
-        color: #582d96;
+        color: var(--status-progress-text);
     }
 
     .btn-close {
@@ -250,7 +250,7 @@
         font-family: $font-main;
 
         &::placeholder {
-            color: var(--text-table-head);
+            color: var(--text-muted);
             font-weight: 400;
         }
 
@@ -263,9 +263,9 @@
         &.readonly,
         &.disabled,
         &:disabled {
-            background: #f5f5f5 !important;
+            background: var(--input-disabled-bg) !important;
             color: var(--text-muted) !important;
-            border-color: #d1d5db !important;
+            border-color: var(--input-disabled-border) !important;
             cursor: not-allowed;
             opacity: 1;
         }
@@ -296,14 +296,14 @@
         padding-right: 16px !important;
     }
 
-    .ant-select:not(.ant-select-disabled).ant-select-focused .ant-select-selector {
-        border-color: #40a9ff00;
-        box-shadow: 0 0 0 2px rgb(24 144 255 / 0%);
-    }
+    // .ant-select:not(.ant-select-disabled).ant-select-focused .ant-select-selector {
+    //     border-color: #40a9ff00;
+    //     box-shadow: 0 0 0 2px rgb(24 144 255 / 0%);
+    // }
 
-    .ant-select:not(.ant-select-customize-input) .ant-select-selector {
-        border: 1px solid #d9d9d900;
-    }
+    // .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+    //     border: 1px solid #d9d9d900;
+    // }
 
     .form-input.input-error {
         border-color: #ff4d4f !important;
