--- a/src/app/pages/resign-management/resign-management.scss
+++ b/src/app/pages/resign-management/resign-management.scss
@@ -564,7 +564,6 @@ $border: var(--border);
 }
 
 .input {
-    // width: 240px;
     padding: 8px 10px;
     border: 1px solid var(--border);
     border-radius: 8px;
@@ -586,7 +585,7 @@ $border: var(--border);
 
 .btn {
     // border: 1px solid var(--border);
-    background: var(--bg-table-head);
+    background: var(--bg-toolbar);
     border-radius: 10px;
     padding: 10px 18px;
     font-size: 14px;
@@ -858,7 +857,7 @@ $border: var(--border);
         font-weight: 500;
         font-size: 10px;
         border-radius: 999px;
-        color: #5e5e5e;
+        color: var(--text-sub);
     }
 
     .btn {
@@ -922,7 +921,7 @@ $border: var(--border);
     color: #ffffff;
     position: relative;
     overflow: hidden;
-    background: linear-gradient(135deg, #313131, #1f1f1f 40%, var(--text));
+    background: linear-gradient(135deg, #1e293b, #131a26 50%);
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
 
     .error-text {
@@ -1010,31 +1009,12 @@ $border: var(--border);
 
 /* ================= FLIP ================= */
 
-::ng-deep .ant-modal-close-x {
-    width: 36px;
-    height: 36px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-}
-
-::ng-deep .ant-modal-close-x:hover {
-    background: rgba(202, 202, 202, 0.5);
-    transform: scale(1);
-    border-radius: 10px;
-    transition: all .25s ease;
-}
 
 .card-scene {
     width: 510px;
     height: 320px;
     perspective: 1200px;
     margin: 25px 0px 0px 0px;
-
-    // @media (min-width: 1025px) {
-    //     display: none;
-    // }
 }
 
 .card-flip {
@@ -1128,70 +1108,3 @@ $border: var(--border);
     background: rgba(255, 255, 255, 0.18);
     transform: translateY(-2px);
 }
-
-
-/* 
--- PART Datepicker -- 
-*/
-/* fix ขนาดแต่ละช่องให้ตายตัว */
-::ng-deep .ant-picker-cell {
-    width: 30px !important;
-    height: 35px !important;
-    padding: 0 !important;
-}
-
-/* fix inner ให้เต็ม cell และเป็นวงกลม */
-::ng-deep .ant-picker-cell-inner {
-    width: 100% !important;
-    height: 100% !important;
-    display: flex !important;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50% !important;
-    transition: background-color 0.2s ease;
-}
-
-/* ทำให้วันที่ที่เลือกเป็นวงกลม */
-::ng-deep .ant-picker-cell-selected .ant-picker-cell-inner {
-    background-color: #4e4e4e !important;
-    color: #ffffff !important;
-    border-radius: 50% !important;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/* hover ตอนชี้เมาส์ */
-::ng-deep .ant-picker-cell-inner:hover {
-    background-color: #b3b3b3 !important;
-    border-radius: 50% !important;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/* month & year mode */
-::ng-deep .ant-picker-month-panel .ant-picker-cell-inner,
-::ng-deep .ant-picker-year-panel .ant-picker-cell-inner,
-::ng-deep .ant-picker-decade-panel .ant-picker-cell-inner {
-    border-radius: 10% !important;
-}
-
-// SELECT (antd) 
-// ::ng-deep .ant-select:not(.ant-select-disabled).ant-select-focused .ant-select-selector {
-//     border-color: #40a9ff00;
-//     box-shadow: 0 0 0 2px rgb(24 144 255 / 0%);
-// }
-
-// ::ng-deep .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
-//     border-color: #40a9ff00;
-//     box-shadow: 0 0 0 2px rgb(24 144 255 / 0%);
-// }
-
-// ::ng-deep .ant-select:not(.ant-select-customize-input) .ant-select-selector {
-//     position: relative;
-//     background-color: #ffffff;
-//     border: 1px solid #cfcfcf00;
-// }
